[gd_scene format=3 uid="uid://6k3xfdbtsw8i"]

[ext_resource type="Script" uid="uid://blim6llfuptfy" path="res://src/scenes/main_menu/main_menu.gd" id="1_ob46e"]
[ext_resource type="Texture2D" uid="uid://dl4ttmrokf3ef" path="res://assets/main_menu/capa jogo.png" id="2_878j3"]
[ext_resource type="FontFile" uid="uid://bayl34n5s6ic7" path="res://fonts/dungeon-mode.ttf" id="2_ob46e"]
[ext_resource type="Texture2D" uid="uid://csfk5imrivyuc" path="res://assets/main_menu/telainicialanimada1.png" id="2_x2yjq"]
[ext_resource type="Texture2D" uid="uid://chubopvtudwlu" path="res://assets/main_menu/telainicialanimada2.png" id="3_lqpn7"]
[ext_resource type="Texture2D" uid="uid://b0wx20gb0wl3b" path="res://assets/main_menu/telainicialanimada3.png" id="4_qel0l"]
[ext_resource type="Texture2D" uid="uid://v8qvhr74bx7q" path="res://assets/main_menu/telainicialanimada4.png" id="5_rrgl4"]
[ext_resource type="Texture2D" uid="uid://bpx7o7fjygbhv" path="res://assets/main_menu/telainicialanimada5.png" id="6_dn3lk"]
[ext_resource type="Texture2D" uid="uid://qe1eb7uk8bht" path="res://assets/main_menu/telainicialanimada6.png" id="7_4ujhu"]
[ext_resource type="PackedScene" uid="uid://bgh6hynxcy5jk" path="res://src/scenes/settings_menu/settings_menu.tscn" id="9_5o0ss"]
[ext_resource type="AudioStream" uid="uid://cx7vm2sour14b" path="res://soundtrack/musga2.ogg" id="11_878j3"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_vnpsp"]
frames = 6
frame_0/texture = ExtResource("2_x2yjq")
frame_0/duration = 0.45
frame_1/texture = ExtResource("3_lqpn7")
frame_1/duration = 0.45
frame_2/texture = ExtResource("4_qel0l")
frame_2/duration = 0.45
frame_3/texture = ExtResource("5_rrgl4")
frame_3/duration = 0.45
frame_4/texture = ExtResource("6_dn3lk")
frame_4/duration = 0.45
frame_5/texture = ExtResource("7_4ujhu")
frame_5/duration = 0.45

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uqeha"]
texture = SubResource("AnimatedTexture_vnpsp")
modulate_color = Color(0.70380783, 0.70380783, 0.70380783, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wem23"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3ovsr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5seab"]

[node name="MainMenu" type="Control" unique_id=1253128885]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ob46e")

[node name="background" type="Panel" parent="." unique_id=53480967]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_uqeha")

[node name="Sprite2D" type="Sprite2D" parent="background" unique_id=522216877]
position = Vector2(240, 135.00002)
scale = Vector2(0.352, 0.352)
texture = ExtResource("2_878j3")

[node name="main_title" type="RichTextLabel" parent="background" unique_id=1281277842]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -81.0
offset_right = 240.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_ob46e")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[shake rate=4.0 level=4 connected=1]Soul[/shake]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="main_title2" type="RichTextLabel" parent="background" unique_id=176688939]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -47.0
offset_right = 240.00003
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_ob46e")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[shake rate=4.0 level=4 connected=1]Imprint[/shake]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="main_menu" type="VBoxContainer" parent="background" unique_id=10489993]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -132.0
offset_top = -139.0
offset_right = 132.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 6
size_flags_vertical = 8
size_flags_stretch_ratio = 8.63
theme_override_constants/separation = 12
alignment = 1

[node name="play" type="Button" parent="background/main_menu" unique_id=1964807369]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.87058824, 0.87058824, 0.87058824, 1)
theme_override_fonts/font = ExtResource("2_ob46e")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_wem23")
text = "Iniciar"
flat = true

[node name="options" type="Button" parent="background/main_menu" unique_id=1832617382]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.87058824, 0.87058824, 0.87058824, 1)
theme_override_colors/font_outline_color = Color(0.14117648, 0.14117648, 0.14117648, 1)
theme_override_fonts/font = ExtResource("2_ob46e")
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_3ovsr")
text = "Op√ßoes"
flat = true

[node name="quit" type="Button" parent="background/main_menu" unique_id=1014640828]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.87058824, 0.87058824, 0.87058824, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ob46e")
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_5seab")
text = "Sair"
flat = true

[node name="settings_menu" parent="." unique_id=100246387 instance=ExtResource("9_5o0ss")]
unique_name_in_owner = true
visible = true
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 133.0
offset_top = 44.0
offset_right = 351.0
offset_bottom = 217.0
grow_horizontal = 1
grow_vertical = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=1670137563]
stream = ExtResource("11_878j3")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="background/main_menu/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="background/main_menu/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="background/main_menu/quit" to="." method="_on_quit_pressed"]
[connection signal="visibility_changed" from="settings_menu" to="." method="_on_settings_menu_visibility_changed"]
